triqs/1.4/_sources/cpp2doc_generated/triqs/gfs/matsubara_domain.txt
..
   Generated automatically using the command:
   c++2doc.py -N triqs /var/lib/jenkins/jobs/triqs_clang3.8/workspace/triqs_src/doc/reference/doc_root.hpp --output_directory=/var/lib/jenkins/jobs/triqs_clang3.8/workspace/build/doc/cpp2doc_generated --includes=/var/lib/jenkins/jobs/triqs_clang3.8/workspace/triqs_src/ --includes=/var/lib/jenkins/jobs/triqs_clang3.8/workspace/build/Config --compiler_options=-DTRIQS_BUILDING_LIBRARY --mako_location=/var/lib/jenkins/jobs/triqs_clang3.8/workspace/triqs_src/tools/

.. highlight:: c


.. _matsubara_domain:

matsubara_domain
==================

**Synopsis**:

.. code-block:: c

     template<bool IsFreq> class matsubara_domain;

The domain





Public members
-----------------

+-----------+----------------------------+---------+
| Member    | Type                       | Comment |
+===========+============================+=========+
| beta      | double                     |         |
+-----------+----------------------------+---------+
| statistic | triqs::gfs::statistic_enum |         |
+-----------+----------------------------+---------+

Member types
-----------------

+-------------+---------+
| Member type | Comment |
+=============+=========+
| point_t     |         |
+-------------+---------+

Member functions
-----------------

+-------------------------------------------------------+---------+
| Member function                                       | Comment |
+=======================================================+=========+
| :ref:`constructor <matsubara_domain_constructor>`     |         |
+-------------------------------------------------------+---------+
| :ref:`operator== != <matsubara_domain_operator== !=>` |         |
+-------------------------------------------------------+---------+
| :ref:`serialize <matsubara_domain_serialize>`         |         |
+-------------------------------------------------------+---------+

.. toctree::
  :hidden:

   matsubara_domain/constructor
   matsubara_domain/operator== !=
   matsubara_domain/serialize

Non Member functions
-----------------------

+---------------------------------------------+-----------------+
| Non member function                         | Comment         |
+=============================================+=================+
| :ref:`h5_write <matsubara_domain_h5_write>` | Write into HDF5 |
+---------------------------------------------+-----------------+
| :ref:`h5_read <matsubara_domain_h5_read>`   | Read from HDF5  |
+---------------------------------------------+-----------------+
| :ref:`<< <matsubara_domain_\<\<>`           |                 |
+---------------------------------------------+-----------------+

.. toctree::
  :hidden:

   matsubara_domain/h5_write
   matsubara_domain/h5_read
   matsubara_domain/<<